@@ -28,6 +28,10 @@
 ;; TODO: use the ITIMER_PROF to detect long executions and print a log
 ;; TODO: state dumps.
 ;; TODO: Syslog
+;; TODO: When the callback object for an ERQ callback is destructed, the
+;; TODO:: driver should inform the ERQ. This way, the ERQ can for example
+;; TODO:: close an existing TCP connection.
+;; TODO: Somehow determine which objects have ERQ callbacks pending.
 ;; TODO: One .c-file per efun.
 ;; TODO: MCP, MCCP (see src/wk/ff-3.3.339-diffs
 ;; TODO: PostgreSQL
@@ -40,12 +44,12 @@
 ;; TODO:: replace-program and the saving/storing of lfun closure values.
 ;; TODO:: Is this desirable anyway?
               
-(Project-Version lpmud 3-3 359)
-(Parent-Version lpmud 3-3 358)
-(Version-Log "Corrected a compilation problem when using ptmalloc.")
+(Project-Version lpmud 3-3 360)
+(Parent-Version lpmud 3-3 359)
+(Version-Log "ptmalloc bugfix.")
 (New-Version-Log
 "")
-(Checkin-Time "Fri, 17 Jan 2003 21:40:30 -0700")
+(Checkin-Time "Sat, 18 Jan 2003 22:40:33 -0700")
 (Checkin-Login lars)
 (Populate-Ignore ("~$" "\\.o$" "core$" "\\.emacs" "\\.a$" "\\.deps"
                   "\\.gz$" "\\.orig$" "\\.rej$" "\\.xSYM" "^driver$"
@@ -82,7 +86,7 @@
   (README (lpmud/n/0_README 1.4.1.1 644))
   (COPYRIGHT (lpmud/d/20_Copyright 1.10.1.8 644))
   (CREDITS (lpmud/d/22_CREDITS 1.70.1.57 644))
-  (CHANGELOG (lpmud/e/38_CHANGELOG. 1.157.1.422 644))
+  (CHANGELOG (lpmud/e/38_CHANGELOG. 1.157.1.423 644))
   (HISTORY (lpmud/f/49_HISTORY 1.296 644))
   (INSTALL (lpmud/d/18_INSTALL 1.11.1.19 644))
   (COPYING.LIB (lpmud/k/14_COPYING.LI 1.2 644))
@@ -232,7 +236,7 @@
   (src/ptmalloc.c (lpmud/c/b/46_ptmalloc.c 1.3 644))
   (src/ptmalloc/thread-m.h (lpmud/c/b/47_thread-m.h 1.1 644) :no-keywords)
   (src/ptmalloc/malloc.h (lpmud/c/b/48_malloc.h 1.1 644) :no-keywords)
-  (src/ptmalloc/malloc.c (lpmud/c/b/49_malloc.c 1.2 644) :no-keywords)
+  (src/ptmalloc/malloc.c (lpmud/c/b/49_malloc.c 1.3 644) :no-keywords)
   (src/ptmalloc/hooks.c (lpmud/c/b/50_hooks.c 1.1 644) :no-keywords)
   (src/ptmalloc/config.h (lpmud/c/b/51_config.h 1.1 644))
   (src/ptmalloc/arena.c (lpmud/d/b/0_arena.c 1.1 644) :no-keywords)
@@ -277,11 +281,11 @@
   (src/wiz_list.c (lpmud/2_wiz_list.c 1.13.1.14.1.3 644))
   (src/xalloc.h (lpmud/g/51_xalloc.h 1.17 644))
   (src/xalloc.c (lpmud/h/0_xalloc.c 1.2.1.18 644))
-  (src/xptmalloc.c (lpmud/d/b/1_xptmalloc. 1.2 644))
+  (src/xptmalloc.c (lpmud/d/b/1_xptmalloc. 1.3 644))
 
   ;; Build files
   (src/func_spec (lpmud/c/31_func_spec 1.53.1.45.1.22.1.3 644))
-  (src/string_spec (lpmud/f/6_string_spe 1.14.1.7 644))
+  (src/string_spec (lpmud/f/6_string_spe 1.14.1.8 644))
   (src/mkfunc.c (lpmud/l/14_mkfunc.c 1.1 644))
   (src/make_func.y (lpmud/b/7_make_func. 1.25.1.30.1.4 644))
 
@@ -442,7 +446,7 @@
   (mudlib/dhrystone2.c (lpmud/a/b/13_dhrystone2 1.2 644))
   (mudlib/erq-tool.c (lpmud/d/31_erq.c 1.1 644))
   (mudlib/simul_efun-dr.c (lpmud/51_simul_efun 1.3 644))
-  (mudlib/master_skeleton.c (lpmud/b/2_master_ske 1.28 644))
+  (mudlib/master_skeleton.c (lpmud/b/2_master_ske 1.29 644))
   (mudlib/telnet.h (lpmud/c/b/13_telnet.h 1.2 644))
   (mudlib/telnetneg.c (lpmud/c/b/14_telnetneg. 1.3 644))
   (mudlib/test_master.c (lpmud/e/39_test_maste 1.10.1.9 644))
@@ -923,7 +927,7 @@
   (doc/applied/parse_command_plural_id_list (lpmud/n/24_parse_comm 1.3 644))
   (doc/applied/prevent_insert (lpmud/n/25_prevent_in 1.3 644))
   (doc/applied/query_weight (lpmud/n/28_query_weig 1.3 644))
-  (doc/applied/remove (lpmud/n/29_remove 1.2 644))
+  (doc/applied/remove (lpmud/n/29_remove 1.3 644))
   (doc/applied/reset (lpmud/n/30_reset 1.4 644))
 
   (doc/concepts/concepts (lpmud/n/31_concepts 1.2 644))
@@ -1018,7 +1022,7 @@
   (doc/efun/debug_message (lpmud/o/23_debug_mess 1.1.1.4 644))
   (doc/efun/deep_copy (lpmud/m/29_deep_copy 1.4 644))
   (doc/efun/deep_inventory (lpmud/o/24_deep_inven 1.3 644))
-  (doc/efun/destruct (lpmud/o/25_destruct 1.6 644))
+  (doc/efun/destruct (lpmud/o/25_destruct 1.7 644))
   (doc/efun/disable_commands (lpmud/o/26_disable_co 1.3 644))
   (doc/efun/ed (lpmud/o/27_ed 1.3 644))
   (doc/efun/efun (lpmud/o/28_efun 1.8 644))
@@ -1351,7 +1355,7 @@
   (doc/master/parse_command_all_word (lpmud/s/10_parse_comm 1.2 644))
   (doc/master/parse_command_prepos_list (lpmud/s/11_parse_comm 1.2 644))
   (doc/master/preload (lpmud/s/12_preload 1.2 644))
-  (doc/master/prepare_destruct (lpmud/s/13_prepare_de 1.2 644))
+  (doc/master/prepare_destruct (lpmud/s/13_prepare_de 1.3 644))
   (doc/master/printf_obj_name (lpmud/m/23_printf_obj 1.2 644))
   (doc/master/privilege_violation (lpmud/s/14_privilege_ 1.4.1.7 644))
   (doc/master/query_allow_shadow (lpmud/s/15_query_allo 1.2 644))
