@@ -38,6 +38,7 @@ PERCENT           "%"
 PERCENT_S         "%s"
 PERIOD            "."
 PROG_DEALLOCATED  "program deallocated"
+PTMALLOC          "ptmalloc"
 SEFUN_CLOSURE     "<simul_efun closure>"
 SMALLOC           "smalloc"
 SLASH             "/"
