@@ -1,6 +1,10 @@
 This file lists all changes made to the game driver in all gory detail.
 See the file HISTORY for a user-oriented summary of all the changes.
 
+18-Jan-2002 (Lars Duening)  (3.3.360)
+  - (ptmalloc) Gawain provided a bugfix and more work towards GC
+       support (yes, my previous enthusiasm was premature).
+
 17-Jan-2002 (Lars Duening)  (3.3.359)
   - (prolang.h) Corrected a compilation problem when using ptmalloc.
 
